// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`для запросов с client_id должен вызывать сайдбар агентского клиента, если запрос сделан от роли "agency" 1`] = `
Object {
  "agencyClientNavigation": Object {},
  "clientNavigation": DescriptError {
    "error": Object {
      "id": "BLOCK_GUARDED",
    },
  },
}
`;

exports[`для запросов с client_id должен вызывать сайдбар агентского клиента, если запрос сделан от роли "company" 1`] = `
Object {
  "agencyClientNavigation": Object {},
  "clientNavigation": DescriptError {
    "error": Object {
      "id": "BLOCK_GUARDED",
    },
  },
}
`;

exports[`для запросов с client_id должен вызывать сайдбар агентского клиента, если запрос сделан от роли "manager" 1`] = `
Object {
  "agencyClientNavigation": Object {},
  "clientNavigation": DescriptError {
    "error": Object {
      "id": "BLOCK_GUARDED",
    },
  },
}
`;

exports[`должен вызывать только агентскую навигацию, если запрос сделан от роли агенства 1`] = `
Object {
  "agencyClientNavigation": DescriptError {
    "error": Object {
      "id": "BLOCK_GUARDED",
    },
  },
  "clientNavigation": DescriptError {
    "error": Object {
      "id": "BLOCK_GUARDED",
    },
  },
}
`;

exports[`должен вызывать только агентскую навигацию, если запрос сделан от роли группы компаний 1`] = `
Object {
  "agencyClientNavigation": DescriptError {
    "error": Object {
      "id": "BLOCK_GUARDED",
    },
  },
  "clientNavigation": DescriptError {
    "error": Object {
      "id": "BLOCK_GUARDED",
    },
  },
}
`;

exports[`должен вызывать только клиентский садйбар, если запрос сделан от роли клиента 1`] = `
Object {
  "agencyClientNavigation": DescriptError {
    "error": Object {
      "id": "BLOCK_GUARDED",
    },
  },
  "clientNavigation": Object {},
}
`;
